# neo4j-chatrec

./: .gitignore  company_identity.jsonl  lkpp_dataset_clean.csv  neo4j_tool.py  prep_csv.py  prep_lkpp_graph.py  pyproject.toml
neo4j_lkpp/: companies.csv  ppk_company.csv
neo4j_movielens/: genre.csv  items.csv  items_genre.csv
